Prevent jtreg to add `--enable-native-access=ALL-UNNAMED`